[build-system]
requires = ["setuptools", "wheel", "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "forbiditerative"
description = "Forbid-Iterative (FI) Planner is an Automated PDDL based planner that includes planners for top-k, top-quality, and diverse computational tasks."
readme = "README-pypi.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["planning"]
authors = [
    {name = "Michael Katz", email="michael.katz1@ibm.com"}
]
dependencies = []
dynamic = ["version"]

classifiers = [
"License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.urls]
"Homepage" = "https://github.com/IBM/forbiditerative"


[tool.setuptools]
py-modules = ["_custom_build"]

[tool.setuptools.cmdclass]
build_py = "_custom_build.BuildPy"
build_ext = "_custom_build.BuildCMakeExt"
bdist_wheel = "_custom_build.bdist_wheel"

[tool.setuptools.package-data]
forbiditerative = ["builds/release/bin/**/*", "builds/release/bin/*"]
driver = ["portfolios/*"]

[tool.setuptools.packages.find]
include = ["forbiditerative*", "driver*"]

[tool.setuptools_scm]
write_to = "forbiditerative/__version__.py"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

